@@ -1,9 +1,9 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_REVISION($Id: configure.in,v 5.75 2008-10-03 17:05:14 andreas_kupries Exp $)
+AC_REVISION($Id: configure.in,v 5.76 2009-05-06 19:42:21 andreas_kupries Exp $)
 
-AC_INIT([expect],[5.44.1.11])
+AC_INIT([expect],[5.44.1.12])
 
 TEA_INIT([3.5])
 
